final advance in -s and default