@@ -266,7 +266,9 @@ class Analyzer implements Runnable {
     public void run() {
         int maxPopularity = Integer.MIN_VALUE;
         int minPopularity = Integer.MAX_VALUE;
-        String tid = String.valueOf(Thread.currentThread().getId()); // get the key of the current thread
+        // String tid = String.valueOf(Thread.currentThread().getId()); // get the key
+        // of the current thread
+        String tid = String.valueOf(Thread.currentThread().threadId()); // get the key of the current thread
         if (Reader.metaDictMax.get(tid) != null) {
             maxPopularity = Reader.metaDictMax.get(tid).popularity;
         }
